[package]
name = "bevy_workshop_template"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.3.1"
bevy = { version = "0.16.1", features = ["dynamic_linking"] }
bevy_framepace = "0.19.1"
leafwing-input-manager = "0.17.0"
rand = "0.9.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
